# openbanking.rs

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
payments/x-jws-signature/: REfZKo7zN2IeE0X2RFGTb4.jwks  X-JWS-SIGNATURE.md  index.js  package.json
src/: main.rs
src/client/: mod.rs
src/config/: mod.rs
src/config/testdata/: config_good.yml
src/oidcdiscovery/: mod.rs
src/oidcdiscovery/testdata/: well-known_openid-configuration.json
